--- a/package.json
+++ b/package.json
@@ -13,11 +13,18 @@
         "gen:env": "gen-env-types .env.example -o ./typings/env.d.ts && prettier --write ./typings/env.d.ts"
     },
     "dependencies": {
-        "astro": "^3.3.0"
+        "@astrojs/solid-js": "^3.0.2",
+        "@astrojs/tailwind": "^5.0.2",
+        "astro": "^3.3.0",
+        "solid-js": "^1.4.3",
+        "tailwind-merge": "^1.14.0",
+        "tailwindcss": "^3.0.24"
     },
     "devDependencies": {
+        "@catppuccin/tailwindcss": "^0.1.6",
         "gen-env-types": "^1.3.4",
-        "prettier": "^3.0.3"
+        "prettier": "^3.0.3",
+        "sass": "^1.69.3"
     },
     "author": {
         "name": "Naman Arora",
