--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "dependencies": {
         "@astrojs/solid-js": "^3.0.2",
         "@astrojs/tailwind": "^5.0.2",
+        "@sanity/astro": "^2.1.1",
+        "@sanity/client": "^6.4.12",
         "astro": "^3.3.0",
+        "sanity": "*",
         "solid-js": "^1.4.3",
         "tailwind-merge": "^1.14.0",
         "tailwindcss": "^3.0.24"
     },
     "devDependencies": {
         "@catppuccin/tailwindcss": "^0.1.6",
+        "dotenv": "^16.3.1",
         "gen-env-types": "^1.3.4",
         "prettier": "^3.0.3",
         "sass": "^1.69.3"
